[gd_scene load_steps=15 format=3 uid="uid://bieqqilmcwov3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_cpe7a"]
[ext_resource type="Texture2D" uid="uid://dmnr01b8gl3nl" path="res://assets/2D-Pixel-Art-Character-Template/Idle/Player Idle 48x48.png" id="2_ofar5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bliwh"]
atlas = ExtResource("2_ofar5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1anp"]
atlas = ExtResource("2_ofar5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddok3"]
atlas = ExtResource("2_ofar5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t686l"]
atlas = ExtResource("2_ofar5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqn0t"]
atlas = ExtResource("2_ofar5")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lgkc"]
atlas = ExtResource("2_ofar5")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4r7"]
atlas = ExtResource("2_ofar5")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr5bc"]
atlas = ExtResource("2_ofar5")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo35n"]
atlas = ExtResource("2_ofar5")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3enr"]
atlas = ExtResource("2_ofar5")
region = Rect2(432, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qh6eg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bliwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1anp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddok3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t686l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqn0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lgkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr5bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo35n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3enr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwhsn"]
radius = 7.0
height = 28.0

[node name="Player" type="Node2D"]

[node name="Player2D" type="CharacterBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_cpe7a")

[node name="Camera2D" type="Camera2D" parent="Player2D"]
zoom = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player2D"]
sprite_frames = SubResource("SpriteFrames_qh6eg")
animation = &"idle"
frame_progress = 0.0921662

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_vwhsn")

[node name="ShootCooldownTimer" type="Timer" parent="Player2D"]

[node name="ShootReloadTimer" type="Timer" parent="Player2D"]

[node name="AmmoLabel" type="Label" parent="Player2D"]
offset_left = -320.0
offset_top = -152.0
offset_right = -200.0
offset_bottom = -128.0
pivot_offset = Vector2(50, 0)

[node name="TimerBar" type="Label" parent="Player2D"]
offset_left = -40.0
offset_top = -152.0
offset_right = 48.0
offset_bottom = -128.0

[node name="HealthBar" type="Label" parent="Player2D"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 184.0
offset_top = -152.0
offset_right = 320.0
offset_bottom = -128.0
grow_horizontal = 0
pivot_offset = Vector2(35, 0)
